# hsrs

./: .gitignore  Cargo.toml  LICENSE  LICENSE-APACHE  README.md  clippy.toml  rustfmt.toml
.github/workflows/: ci.yml
docs/: .gitignore
docs/plans/: 2026-05-13-conditional-haskell-derives.md  2026-05-13-hsrs-haskell-bindings.md  2026-05-13-hsrs-open-source.md  2026-05-14-facade-crate.md  2026-05-14-haddock-from-rustdoc.md
hsrs/: Cargo.toml
hsrs-codegen/: Cargo.toml
hsrs-codegen/src/: haskell.rs  ir.rs  lib.rs  main.rs  parser.rs
hsrs-codegen/tests/: cli.rs  integration.rs
hsrs-examples/: Bindings.hs  Cargo.toml
hsrs-examples/src/: edge_cases.rs  lib.rs
hsrs-haskell/: .gitignore  CHANGELOG.md  hsrs.cabal
hsrs-haskell/src/Hsrs/: Runtime.hs
hsrs-macros/: Cargo.toml
hsrs-macros/src/: enumeration.rs  lib.rs  module.rs  value_type.rs
hsrs/src/: borsh_buffer.rs  enumeration.rs  ffi_utils.rs  lib.rs  module.rs
